# timetable

./: CMakeLists.txt
conan-recipe/: conanfile.py  test.bat
conan-recipe/test_package/: CMakeLists.txt  example.cpp
projects/tester/: CMakeLists.txt
projects/tester/source/: TestTimeline.cpp
projects/timeline/include/timeline/: timeline.h
projects/timetable/include/timetable/: TimeTable.h
projects/timetable_tester/: CMakeLists.txt
projects/timetable_tester/source/: TimeTableTester.cpp
